# manim-course-utils

./: .gitignore  README.md  pyproject.toml
manim_course_utils/: __init__.py  animation_description.py  markdown_tex_template.py  mobject_description.py  rst_mobject.py
tests/: test_package.py
