[tool.poetry]
name = "manim-course-utils"
version = "1.0.0"
description = "Para el curso de ManimCE de MathLike"
homepage = "https://github.com/MathLike/manim-course-utils"
repository = "https://github.com/MathLike/manim-course-utils"
authors = ["MathLike <benjamin.ubilla@uc.cl>"]
readme = "README.md"
packages = [{include = "manim_course_utils"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
manim = "^0.17.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
